# mem-wiz

./: .gitignore  AGENTS.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: release.yml
scripts/: __init__.py  build_skill_artifact.py
src/mem-wiz/: SKILL.md
src/mem-wiz/memwiz/: __init__.py  auditlog.py  autonomy_policy.py  cli.py  clock.py  compiler.py  config.py  dedupe.py  doctoring.py  fsops.py  models.py  output.py  policy.py  promotion.py  pruning.py  remembering.py  reporting.py  retrieval.py  serde.py  storage.py  updating.py  validation.py
src/mem-wiz/memwiz/commands/: accept.py  audit.py  capture.py  compile.py  context.py  doctor.py  get.py  init.py  lint.py  promote.py  (+6 more)
src/mem-wiz/references/: autonomous-capture.md  storage-layout.md
src/mem-wiz/scripts/: memwiz
src/memwiz/: __init__.py  cli.py  clock.py  config.py  fsops.py  models.py  scoring.py  serde.py  storage.py
src/memwiz/commands/: __init__.py  accept.py  init.py  promote.py  score.py
tests/: conftest.py  test_audit_command.py  test_auditlog.py  test_autonomous_loop_e2e.py  test_autonomy_policy.py  test_capture_accept_flow.py  test_cli_contract.py  test_cli_smoke.py  test_clock.py  test_compile.py  test_config.py  test_context.py  test_dedupe.py  test_doctor.py  test_e2e_cli.py  test_fsops.py  test_init.py  test_json_output.py  test_lint.py  test_models.py  test_project_contract.py  test_promote.py  test_prune.py  test_release_artifact.py  test_release_workflow.py  test_remember.py  test_retrieval.py  test_scoring.py  test_self_update.py  test_status.py  test_storage.py
