[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memwiz"
version = "0.1.2"
description = "Bootstrap contract for the memwiz CLI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6"]

[project.scripts]
memwiz = "memwiz.cli:main"

[tool.memwiz]
skill_root = "src/mem-wiz"

[tool.setuptools.package-dir]
"" = "src/mem-wiz"

[tool.setuptools.packages.find]
where = ["src/mem-wiz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
